website/websites/u64/code/fannkuchredux.1.gpp.log

Sun, 27 Oct 2013 22:48:25 GMT

MAKE:
/usr/bin/g++ -c -pipe -O3 -fomit-frame-pointer -march=native  -pthread -flax-vector-conversions fannkuchredux.c++ -o fannkuchredux.c++.o &&  \
        /usr/bin/g++ fannkuchredux.c++.o -o fannkuchredux.gpp_run -lpthread -lboost_thread 
In file included from /usr/include/c++/4.8/future:35:0,
                 from fannkuchredux.c++:10:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
fannkuchredux.c++: In constructor ‘Perm::Perm(unsigned int)’:
fannkuchredux.c++:40:3: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
 : cnt {0},n(n),permcount(0)
   ^
fannkuchredux.c++: In member function ‘Perm::P Perm::get(int)’:
fannkuchredux.c++:53:53: warning: lambda expressions only available with -std=c++11 or -std=gnu++11 [enabled by default]
     std::generate(perm.p,perm.p+n,[&i](){return ++i;});
                                                     ^
fannkuchredux.c++:53:54: error: no matching function for call to ‘generate(int_t [16], int_t*, Perm::get(int)::__lambda0)’
     std::generate(perm.p,perm.p+n,[&i](){return ++i;});
                                                      ^
fannkuchredux.c++:53:54: note: candidate is:
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from fannkuchredux.c++:9:
/usr/include/c++/4.8/bits/stl_algo.h:5048:5: note: template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator)
     generate(_ForwardIterator __first, _ForwardIterator __last,
     ^
/usr/include/c++/4.8/bits/stl_algo.h:5048:5: note:   template argument deduction/substitution failed:
fannkuchredux.c++: In substitution of ‘template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator) [with _FIter = unsigned char*; _Generator = Perm::get(int)::__lambda0]’:
fannkuchredux.c++:53:54:   required from here
fannkuchredux.c++:53:54: error: template argument for ‘template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator)’ uses local type ‘Perm::get(int)::__lambda0’
     std::generate(perm.p,perm.p+n,[&i](){return ++i;});
                                                      ^
fannkuchredux.c++:53:54: error:   trying to instantiate ‘template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator)’
fannkuchredux.c++: In function ‘Result fannkuch(int)’:
fannkuchredux.c++:108:4: error: ‘future’ is not a member of ‘std’
    std::future<Result> ft[N];
    ^
fannkuchredux.c++:108:22: error: expected primary-expression before ‘>’ token
    std::future<Result> ft[N];
                      ^
fannkuchredux.c++:108:24: error: ‘ft’ was not declared in this scope
    std::future<Result> ft[N];
                        ^
fannkuchredux.c++:115:15: error: ‘async’ is not a member of ‘std’
       ft[i] = std::async(std::launch::async,work,perm,j,max);
               ^
fannkuchredux.c++:115:31: error: ‘std::launch’ has not been declared
       ft[i] = std::async(std::launch::async,work,perm,j,max);
                               ^
fannkuchredux.c++:119:12: error: ‘r’ does not name a type
       auto r = ft[i].get();
            ^
fannkuchredux.c++:120:23: error: ‘r’ was not declared in this scope
       tmp.checksum += r.checksum;
                       ^
make: [fannkuchredux.gpp_run] Error 1 (ignored)
rm fannkuchredux.c++
0.12s to complete and log all make actions

COMMAND LINE:
./fannkuchredux.gpp_run 10

MAKE ERROR 

